--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "dependencies": {
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
-        "react-router-dom": "^7.4.0"
+        "react-router-dom": "^7.4.0",
+        "cors": "^2.8.5"
     },
     "devDependencies": {
         "@vitejs/plugin-react": "^4.3.4",
